opam-version: "2.0"
authors:      [ "Virgile Robles" ]
maintainer:   [ "virgile.robles@pm.me" ]
homepage:     "https://github.com/Firobe/mirage-kv-unikraft"
dev-repo:     "git+https://github.com/Firobe/mirage-kv-unikraft.git"
bug-reports:  "https://github.com/Firobe/mirage-kv-unikraft/issues"
tags:         [ "org:mirage" ]
license:      "ISC"
build: [
  ["dune" "subst" ] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "4.08.0"}
  "mirage-kv" {>= "6.1.1"}
  "optint"
  "lwt" {>= "5.7.0"}
  "ptime"
  "cstruct" {with-test & >= "3.2.0"}
  "rresult" {with-test}
  "mirage-clock-unix" {with-test & >= "3.0.0"}
  "alcotest" {with-test & >= "0.8.1"}
]
synopsis: "Key-value store for MirageOS backed by Unix filesystem, for Unikraft"
description: """
This is a Mirage key-value store backed by an underlying Unix directory.

The current version supports the `Mirage_kv_lwt.RO` and `Mirage_kv_lwt.RW`
signatures defined in the `mirage-kv-lwt` package.
"""
x-maintenance-intent: [ "(latest)" ]
